[+] #313 Fermer l'overlay des médias avec la touche "ESC/ECHAP" du clavier (jerrywham)
[+] #317 #325 plxShow->lastArtList() rechercher des catégories par leur url plutôt que par leur ID (jerrywham, sudwebdesign)
[+] #331 #330 Ajout d'une image d'accroche sur une catégorie (Philippe-M)
FIX #287 Capcha : ajout d'un espace insécable avant le "?" (P3ter)
FIX #302 Renvoie vers index.php si un paramètre est inconnu dans l'URI (bazooka07)
FIX #318 L_NEW_CATEGORY en doublon pour certaines langues (P3ter)
FIX #322 plxDate::getCalendar() ne retourne jamais L_SUNDAY (jerrywham, P3ter)
FIX #323 La fonction plxUtils::printSelect ne fonctione pas avec un "selected" de type numérique (Philippe-M)
FIX #324 Correction couleur des selecteurs si le theme du navigateur est inversé (sudwebdesign)
FIX #326 Remplacement de "create_function()" déprécié depuis PHP 5.3 (faille et dégradation des performances) (P3ter)
FIX #329 Mauvais affichage du nom du site et du menu avec Safari (P3ter)
FIX #332 Traductions manquantes en Polonais (sudwebdesign)
FIX #334 Thème par défaut : affichage cassé des sous-menu de pages statiques (sudwebdesign)
FIX #343 Article n'est plus affiché après suppression de la catégorie (P3ter)
FIX #345 $plxShow->catList affiche la catégorie 10 à tort (bazooka07)


[+] Theme admin retouché improve responsive-menu 100%<768px + fonts Ubuntu, line-heights (sudwebdesign)
[+] plxUtils::printLinkCss Méthode qui affiche la balise <link> partir d'un fichier * Inspiré de forum.pluxml.org/discussion/6281/une-feuille-css-peut-en-cacher-une-autre (bazooka07 & sudwebdesign)
[+] Fix CORS feed.php + header('Access-Control-Allow-Origin: *'); #autorise le cross-origin des flus rss/atom : Cross-Origin Resource Sharing : enable-cors.org/server_php.html + developer.mozilla.org/fr/docs/Web/HTTP/Headers/Access-Control-Allow-Origin (sudwebdesign)
[+] CodesBook : Les "Hook Plugins" en commentaire complétés